--- a/posts/2025-01-21_start-to-art.qmd
+++ b/posts/2025-01-21_start-to-art.qmd
@@ -4,7 +4,7 @@ date: 2025-09-28
 categories: [workshop, in person, Scotland]
 image: ../www/images/start-to-art/start-to-art.jpg
 image-alt: ""
-frontpage: true
+frontpage: false
 description: Announcing a 3-day luxury retreat in Scotland September 19-21 featuring decorative rope by me and photography by Captured Erotica
 ---
 
