--- a/sets/pride-flags.qmd
+++ b/sets/pride-flags.qmd
@@ -14,3 +14,5 @@ credits:
 Happy Pride! 
 
 ![raibow, trans, biseual, pansexual, genderqueer, and nonbinary flag  inspired ties](../www/images/composites/pride.jpg)
+
+See more outtakes on my Patreon: [rainbow pride](https://www.patreon.com/posts/pride-flag-pilot-129104293), [bi pride](https://www.patreon.com/posts/bisexual-pride-131184206) and [pan pride](https://www.patreon.com/posts/pansexual-flag-131584062)
