--- a/sets/pride-flags.qmd
+++ b/sets/pride-flags.qmd
@@ -1,5 +1,5 @@
 ---
-title: Pride Flags
+title: Happy Pride! 
 categories: [nsfw, corset, rosettes, garters]
 image: ../www/images/pride/pride-1.jpg
 image-alt: ""
@@ -11,8 +11,8 @@ credits:
   photo: Setonix
 ---
 
-Happy Pride! 
+Rainbow, trans, bisexual, pansexual, genderqueer, and nonbinary flag  inspired ties. See more outtakes on my Patreon: [rainbow pride](https://www.patreon.com/posts/pride-flag-pilot-129104293), [bi pride](https://www.patreon.com/posts/bisexual-pride-131184206) and [pan pride](https://www.patreon.com/posts/pansexual-flag-131584062)
 
-![raibow, trans, biseual, pansexual, genderqueer, and nonbinary flag  inspired ties](../www/images/composites/pride.jpg)
+![](../www/images/composites/pride.jpg)
 
-See more outtakes on my Patreon: [rainbow pride](https://www.patreon.com/posts/pride-flag-pilot-129104293), [bi pride](https://www.patreon.com/posts/bisexual-pride-131184206) and [pan pride](https://www.patreon.com/posts/pansexual-flag-131584062)
+
